changed about page to include station, date, and temp info, added gitignore, added images to static folder, added index and about html pages to templates folder

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,22 @@
     <meta name="description" content="Weather Data API App" />
     <meta name="author" content="Your Name" />
     <title>Weather Data API</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="/static/styles.css" />
   </head>
   <body>
+    <nav>
+      <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+      </ul>
+    </nav>
     <header>
       <h1>Weather Data API</h1>
     </header>
     <main>
       <p>Welcome to the Weather Data API app!</p>
+      <img src="{{url_for('static', filename='weather.webp')}}"" alt="Weather
+      Image" style="height: 200px; width: 200px">
     </main>
     <footer>
       <p>&copy; 2025 Weather Data API App</p>
