added url endpoints for all data and yearly data

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,18 @@
     </header>
     <main>
       <p>Welcome to the Weather Data API app!</p>
+      <p>
+        Enter a URL with the station and date for a specific date:
+        "http://127.0.0.1:5000/api/v1/STATION/YYYY-MM-DD
+      </p>
+      <p>
+        Enter a URL with the station for all dates:
+        "http://127.0.0.1:5000/api/v1/STATION
+      </p>
+      <p>
+        Enter a URL with the station and year for annual data:
+        "http://127.0.0.1:5000/api/v1/annual/STATION/YYYY
+      </p>
       <p>{{data|safe}}</p>
     </main>
     <footer>
